testdata/invalid/nil-non-nullable.pakt
# ERROR: nil assigned to non-nullable type
name:str = nil
